2009-03-24  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/baselib/batlib_Baselib_Lexing.*: removed
	
	* src/main/threads/batteries.ml: [ExtLexing.Lexing] replaces [Lexing]

	* src/main/nothreads/batteries.ml: [ExtLexing.Lexing] replaces [Lexing]

	* src/core/extlib.mlpack: [ExtLexing] added

	* src/core/extlib/extLexing.ml*: created

2009-03-22  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/toplevel/cbtop.ml: general cleanup

2009-03-19  Jeremie Dimino <jeremie@dimino.org>

	* src/core/extlib/extUChar.ml*: added [lowercase], [uppercase], [icompare], [IUChar]
	
2009-03-22  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/toplevel/cbtop.ml: added

	* src/batteries_toolchain/ocaml.in: now using [cbtop.ml]

	* src/batteries_toolchain/toplevel.mltop: added

	* Makefile.in:[TOPLEVEL_TARGETS], [install] now make use of [toplevel.top]


2009-03-17  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/batteries_help.ml: in #browse, now replacing all non-alphanumerical characters

	* src/core/extlib/extList.mli: [takewhile], [dropwhile] moved down

	* src/core/extlib/extList.ml*: [ExceptionLess] => [Exceptionless]

	* src/core/extlib/extList.ml: flattened, copyright updated

	* src/core/extlib/extHashtbl.ml*: [ExceptionLess] => [Exceptionless]

	* src/core/extlib/extHashtbl.ml: flattened, copyright updated

	* src/core/extlib/extMap.ml: flattened, copyright updated

	* src/core/extlib/extMap.ml*: [ExceptionLess] => [Exceptionless]
	
	* src/core/extlib/extArray.ml: flattened, copyright updated

	* src/core/extlib/extArray.ml*: [ExceptionLess] => [Exceptionless]

	* src/core/extlib/extSet.ml: flattened, copyright updated

	* src/core/extlib/extSet.ml*: [ExceptionLess] => [Exceptionless]

	* src/core/extlib/enum.ml*: [ExceptionLess] => [Exceptionless]
	
	* src/main/threads/batteries.ml: Added module aliases for compatibility with base/ext libraries.