@@ -1,5 +1,7 @@
 2009-03-24  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
+	* src/batteries_toolchain/ocaml.in: now using "@DESTDIR@/toplevel.top"
+
 	* src/core/baselib/batlib_Baselib_Lexing.*: removed
 	
 	* src/main/threads/batteries.ml: [ExtLexing.Lexing] replaces [Lexing]
